--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -6,13 +6,13 @@ metadata:
   description: ''
   tags: []
   annotations:
-    github.com/project-slug: Hotmart-Org/graphql-preload
+    github.com/project-slug: UseFedora/graphql-preload
     backstage.io/techdocs-ref: dir:.
   links: []
 spec:
   type: service
   lifecycle: production
-  owner: Platform Enablement - DevOps Experience
+  owner: Platform Enablement
   heimdall:
     reportable: false
     pci: false
