--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,5 @@ jobs:
         with:
           ruby-version: '2.7' # Not needed with a .ruby-version file
       - run: |
+          rm Gemfile.lock
           bundle install
